# youtube_sentiment_analysis

./: .env  .gitignore  .travis.yml  Dockerfile  LICENCE  Pipfile  README.md  analysis.ipynb  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.cfg  sonar-project.properties
.ipynb_checkpoints/: test-checkpoint.py
api/: main.py  modeling.py  monitoring.py  nlp_cleaner.py  preprocessing.py  scoring.py
api/tests/: test_main.py  test_modeling.py  test_scoring.py
data/: comments.csv  script.sql  sentiments.csv  users.db
models/: SVC_solo.joblib  grid_search_SVC.joblib
mongo/: comments.csv  mongo-init.sh
notebooks/: Preprocessing.ipynb  analysis.ipynb
scripts/: run_models_script.py
src/nohossat_cas_pratique/: description.yml  emailing.py  logging_app.py  main.py  modeling.py  monitor.py  preprocessing.py  run_models_script.py  scoring.py  user_creation.py
src/nohossat_cas_pratique.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: coverage.xml  test_emailing.py  test_logging.py  test_main.py  test_modeling.py  test_monitor.py  test_preprocessing.py  test_scoring.py  test_user_creation.py
