[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.eggs
  | __pycache__
)/
'''

[tool.isort]
src_paths = ["src", "tests"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.coverage.run]
omit = ["env/*",  "tests/*",  ".eggs/*"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = python3.6, python3.7, python3.8, python3.9

[testenv]
deps = -rrequirements.txt
commands =
    pytest tests/ --cov={env:PKG} --cov-report xml:tests/reports/coverage.xml
"""
